add other pages

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="name">sugiura</div>
         </div>
         <div class="page_links">
-            <a href="works.html">
+            <a href="pages/works.html">
                 <div class="links">works</div>
             </a>
-            <a href="profile.html">
+            <a href="pages/profile.html">
                 <div class="links">profile</div>
             </a>
         </div>
