--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Sugiura_Portfolio_LP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
-    <link rel="stylesheet" href="../css/index.css">
-    <script src="../js/index.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js"></script>
     <!-- pc size -->
 
 </head>
