--- a/pages/profile.html
+++ b/pages/profile.html
@@ -34,6 +34,11 @@
                 <p>様々な仕事を受けつつ、資格取得とキャリアアップを志しており</p>
                 <p>最終的にゲーム製作に携わりたいと考えています</p>
                 <p>まだまだ未熟ではございますが、もし少しでもご興味をお持ちいただけましたら、お声がけいただけますと幸いです</p>
+                <div class="some_links">
+                    <div class="link_container">
+                        <a href ="https://github.com/Sugiura-Engineer" target="_blank" rel="noopener noreferrer"><img src="../img/github-mark.png" class="link_github"/></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
