--- a/pages/profile.html
+++ b/pages/profile.html
@@ -30,8 +30,8 @@
             <div class="big_message">
                 <p>スギウラと申します</p>
                 <p>情報系大学を卒業し、新卒でフリーランスとして駆け出しエンジニアを始めました</p>
-                <p>現在はクラウドソーシングで仕事を受注、成果物を納品しております</p>
-                <p>様々な仕事を受けつつ、資格取得とキャリアアップを志しており</p>
+                <p>現在はモダンなサイト制作の勉強をしつつ、エンジニアバイトを探しております</p>
+                <p>また、資格取得とキャリアアップも志しており</p>
                 <p>最終的にゲーム製作に携わりたいと考えています</p>
                 <p>まだまだ未熟ではございますが、もし少しでもご興味をお持ちいただけましたら、お声がけいただけますと幸いです</p>
                 <div class="some_links">
