--- a/pages/works.html
+++ b/pages/works.html
@@ -21,6 +21,7 @@
         <div class="center_box">
             <div class="icons_container">
                 <div class="icon" id="all_tag"><div class="icon-bg"><div class="all">All</div></div></div>
+                <div class="icon" id="web_tag"><div class="icon-bg"><img src="../img/Internet_browser_icon_3904.png"/></div></div>
                 <div class="icon" id="react_tag"><div class="icon-bg"><img src="../img/React-icon.png"/></div></div>
                 <div class="icon" id="nodejs_tag"><div class="icon-bg"><img src="../img/nodejsStackedDark.jpg"/></div></div>
             </div>
@@ -43,9 +44,23 @@
                             <div class="git_link"><a href="https://github.com/Sugiura-Engineer/sample_ReservationSystem" target="_blank" rel="noopener noreferrer"><img src="../img/github-mark.png"/></a></div>
                         </div>
                     </div></div>
-                    <!--ピンポンゲームサイト-->
-                    <div class="article_container" data-category="nodejs"></div>
-                    <div class="article_container" data-category="nodejs"></div>
+                    <!--ポッキーサイト-->
+                    <div class="article_container" data-category="web"><div class="article">
+                        <img src="../img/sample_pockyA.png" id="article_img"/>
+                            <div class="work_title">サンプルポッキーサイト</div>
+                                <div class="work_desc">
+                                    <p>ポッキーのブランド拡張アイデアサイト</p>
+                                    <p>学生時代に考えた架空商品の、認知と購買数確保を想定して制作</p>
+                                    <p>特に見ためにこだわり、メイン層の女子高生に向けたSNSと韓国を意識した見た目</p>
+                                </div>
+                            <div class="tech-box">
+                            <div class="work_tech">
+                                <p>使用技術</p>
+                                <p>HTML css js</p>
+                            </div>
+                            <div class="git_link"><a href="https://github.com/Sugiura-Engineer/sample_PockyEarphone" target="_blank" rel="noopener noreferrer"><img src="../img/github-mark.png"/></a></div>
+                        </div>
+                    </div></div>
                 </div>
                 <div id="no_result">
                     該当なし
